# UniPD_Computer_Vision_Lab

./: .gitignore  notes.md
Lab1/: .CMakeLists.txt  OpenImg  lab1.cpp  lab1_t3.cpp  lab1_t4.cpp
Lab1/test/: basci  basci.cpp  opencv_basic  opencv_basic.cpp
Lab2/: Lab2.md
Lab2/Task1/: .CMakeLists.txt  main.cpp
Lab2/Task2/: .CMakeLists.txt  main.cpp  task2.cpp  task2.h
Lab2/Task3/: .CMakeLists.txt  main.cpp  task3.cpp  task3.h
Lab2/Task4/: .CMakeLists.txt  main.cpp
Lab2/Task5/: .CMakeLists.txt  main.cpp
Lab3/: Lab3.md
Lab3/Task1/: .CMakeLists.txt  main.cpp
Lab3/Task2/: .CMakeLists.txt  main.cpp
Lab3/Task3/: .CMakeLists.txt  main.cpp
Lab3/Task4/: .CMakeLists.txt  Task4  main.cpp
Lab3/Task5/: .CMakeLists.txt  main.cpp
Lab4/: Lab4.md
Lab4/Task1/: .CMakeLists.txt  main.cpp
Lab4/Task2/: .CMakeLists.txt  main.cpp
Lab4/Task3/: .CMakeLists.txt  main.cpp
Lab4/Task4/: .CMakeLists.txt  main.cpp
Lab5/: Lab5.md
Lab5/Task1/: .CMakeLists.txt  main.cpp
Lab5/Task2/: .CMakeLists.txt
Lab5/Task3/: .CMakeLists.txt  main.cpp
Lab6/: Lab6.md
Lab6/Task1/: .CMakeLists.txt  main.cpp
Lab7/: Lab7.md
Lab7/Task1/: CMakeLists.txt  main.cpp
Lab8/: lab8.md
Lab8/Task2/: .CMakeLists.txt  main.cpp
